WIP : rework example and packaging for browser version
Signed-off-by: Vincent de Chefdebien <v.dechef@gmail.com>

--- a/examples/swapi/www/index.html
+++ b/examples/swapi/www/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>SWAPI demo</title>
-     <script src="bundle.js"></script>
+     <script type="text/javascript" src="docx-templates.js"></script>
+     <script type="text/javascript" src="demo.js"></script>
   </head>
   <body>
     Testing docx-templates from browser ...
